2006-03-20  Edward Hervey  <edward@fluendo.com>

	* __init__.py: removed
	* pitivi/ui/complexinterface.py:
	LayeredWidgetInterface is no longer used
	* pitivi/ui/ruler.py:
	more comments
	

2006-03-17  Edward Hervey  <edward@fluendo.com>

	* docs/HACKING:
	More precision...
	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/effects.py:
	* pitivi/objectfactory.py:
	* pitivi/pitivi.py:
	* pitivi/playground.py:
	* pitivi/project.py:
	* pitivi/settings.py:
	* pitivi/sourcelist.py:
	* pitivi/timeline.py:
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/timelineobjects.py:
	* pitivi/ui/tracklayer.py:
	* pitivi/ui/viewer.py:
	Final part of coding style compliance.
	* pitivi/ui/sourcefactories.py:
	Accept drop from text/plain sources.

2006-03-16  Edward Hervey  <edward@fluendo.com>

	* docs/HACKING:
	More precision on coding style
	
	* pitivi/ui/complexinterface.py:
	* pitivi/ui/complexlayer.py:
	* pitivi/ui/complexsource.py:
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/encodingdialog.glade:
	* pitivi/ui/exportsettingswidget.glade:
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/gstwidget.py:
	* pitivi/ui/infolayer.py:
	* pitivi/ui/layerwidgets.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/projectsettings.glade:
	* pitivi/ui/projectsettings.py:
	* pitivi/ui/ruler.py:
	* pitivi/ui/sourcefactories.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/timelineobjects.py:
	* pitivi/ui/tracklayer.py:
	* pitivi/ui/viewer.py:
	Update all UI section to proper coding style, still have to do the
	non-ui part.

2006-03-16  Edward Hervey  <edward@fluendo.com>

	* docs/HACKING
	New document about hacking on PiTiVi.
	* pitivi/bin.py:
	Fixes according to PEP-8
	* pitivi/check.py:
	Added runtime check for gnomevfs module availability
	* pitivi/discoverer.py:
	Fixes according to PEP-8
	* pitivi/ui/complexsource.py:
	Speed optimizations and fixes
	* pitivi/ui/layerwidgets.py:
	Smaller buttons
	* pitivi/ui/timelineobjects.py:
	Fixes according to PEP-8
	* pitivi/ui/tracklayer.py: